--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql:42.5.0'
 	runtimeOnly 'org.postgresql:postgresql'
+	testImplementation 'com.h2database:h2:1.4.200'
 
 
 }
