--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 
 
-
+spring.datascource.hiraki.maximum-pool-size=5
 spring.jpa.show-sql=false
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
